core/hop/include/hop.h

// A running Hop node the host drives. Thread-safe (interior `Mutex`), handed to
// the foreign side as a reference-counted object.
typedef struct HopNode HopNode;
// Returns the ABI version this shared library implements (see [`HOP_ABI_VERSION`]).
uint32_t hop_abi_version(void);
// Create a node with a fresh identity and ephemeral (in-memory) storage. Free with `hop_node_free`.
const struct HopNode *hop_node_new(void);
// Open a node from a saved 32-byte identity `secret` with ephemeral (in-memory) storage. Pass
// NULL/0 for a fresh identity. Free with `hop_node_free`.
const struct HopNode *hop_node_with_secret(const uint8_t *secret, uintptr_t secret_len);
// Free a node handle returned by any constructor. Safe to pass NULL.
//
// Ownership: this consumes the one strong reference each constructor returned. The caller must
// ensure no other thread is calling into the same handle concurrently with free (the ABI does
// not expose a retain/clone), and must not use the pointer afterward.
void hop_node_free(const struct HopNode *node);
// Write this node's 32-byte address into `out` (must have room for 32 bytes). False on NULL.
bool hop_node_address(const struct HopNode *node, uint8_t *out);
// Advance authenticated protocol time: expire adverts, retransmit unacked bundles, and prune dedup.
// `now_ms` must be plausible, non-regressing Unix epoch milliseconds from synchronized wall time.
// Monotonic uptime counters such as Arduino `millis()` or `esp_timer_get_time()` are not Unix time.
void hop_node_tick(const struct HopNode *node, uint64_t now_ms);
// A bearer link came up. `role` = which side dialed (the Noise initiator/responder selector),
// using the [`HopLinkRole`] discriminants (0 = Dialer, 1 = Acceptor).
//
// core-ffi-05: `role` is taken as a plain `u32`, not the `HopLinkRole` enum by value. A C caller
// passing an out-of-range int would otherwise materialize an invalid Rust enum (instant UB) before
// any validation runs. Here only `0` selects Dialer; any other value is treated as Acceptor, so a
// bad int can never be UB.
void hop_link_up(const struct HopNode *node, uint64_t link, uint32_t role);
// One frame of opaque bytes arrived on `link`.
void hop_bytes_received(const struct HopNode *node,
                        uint64_t link,
                        const uint8_t *data,
                        uintptr_t len);
// A bearer link dropped.
void hop_link_down(const struct HopNode *node, uint64_t link);
// Drain queued outbound packets. Synchronously invokes `sink(ctx, link, bytes_ptr, bytes_len)`
// once per packet during this call. This is the POLL model; core never pushes asynchronously.
// The byte pointer is valid only for the duration of each `sink` call; copy what you keep.
void hop_drain_outgoing(const struct HopNode *node, void (*sink)(void *ctx,
                                                                 uint64_t link,
                                                                 const uint8_t *bytes,
                                                                 uintptr_t len), void *ctx);
// Subscribe the directory to a service `topic` (UTF-8 C string).
void hop_subscribe(const struct HopNode *node, const char *topic);
// Publish this node's prekey advert (DESIGN.md §25) so peers can seal forward-secret messages to
// us; it gossips on link-up. Call once after opening (and after the first `hop_node_tick` sets a
// real clock, else the advert is judged expired). Returns true on success.
bool hop_publish_prekey(const struct HopNode *node);
// Drain newly-received messages (poll model). Invokes
// `sink(ctx, inbox_id32, from32, content_type_cstr, body_ptr, body_len, hops, created_at_ms)` once
// per message during this call. `inbox_id` and `from` each point at 32 bytes; `content_type` is a
// NUL-terminated UTF-8 string; `body` is `body_len` bytes. All pointers are valid only for the
// callback. Returning true is synchronous host acceptance: core then durably removes that item and
// emits its ACK/vaccine. Returning false, exiting, or failing acceptance persistence leaves it queued
// for redelivery.
void hop_poll_inbox(const struct HopNode *node,
                    bool (*sink)(void *ctx,
                                 const uint8_t *inbox_id,
                                 const uint8_t *from,
                                 const char *content_type,
                                 const uint8_t *body,
                                 uintptr_t body_len,
                                 uint8_t hops,
                                 uint64_t created_at),
                    void *ctx);
// Send a hops:// service request to `dst` (32 bytes): invoke `method` on `service` with `args`.
// The reply arrives later via `hop_poll_service_responses`. Writes the 32-byte request id to
// `out_id` (may be NULL) and returns true.
bool hop_send_service_request(const struct HopNode *node,
                              const uint8_t *dst,
                              const char *service,
                              const char *method,
                              const uint8_t *args,
                              uintptr_t args_len,
                              uint8_t *out_id);
// Seal a hops:// response back to a request's caller (host side). `to` = the request's `from`;
// `for_request_id` = its `request_id`. Returns true on success.
bool hop_send_service_response(const struct HopNode *node,
                               const uint8_t *to,
                               const uint8_t *for_request_id,
                               uint16_t status,
                               const uint8_t *body,
                               uintptr_t body_len);
// Drain hops:// service requests addressed to this node (host side). Invokes
// `sink(ctx, from32, request_id32, service_cstr, method_cstr, args_ptr, args_len)` per request.
void hop_poll_service_requests(const struct HopNode *node,
                               void (*sink)(void *ctx,
                                            const uint8_t *from,
                                            const uint8_t *request_id,
                                            const char *service,
                                            const char *method,
                                            const uint8_t *args,
                                            uintptr_t args_len),
                               void *ctx);
// Poll hops:// service responses sealed back to this node (caller side). Invokes
// `sink(ctx, from32, for_request_id32, status, body_ptr, body_len)` per response. Returning true is
// synchronous acceptance. Returning false leaves the durable row queued for redelivery until
// [`hop_accept_service_response`] succeeds.
void hop_poll_service_responses(const struct HopNode *node,
                                bool (*sink)(void *ctx,
                                             const uint8_t *from,
                                             const uint8_t *for_request_id,
                                             uint16_t status,
                                             const uint8_t *body,
                                             uintptr_t body_len),
                                void *ctx);
// Drain received `hps://` publications (poll model, the same shape as [`hop_poll_inbox`]). Invokes
// `sink(ctx, id32, path_cstr, sender32, body_ptr, body_len)` once per publication during this call.
// `id` and `sender` each point at 32 bytes; `path` is a NUL-terminated UTF-8 string; every pointer
// is valid only for the callback, so copy what you keep. `sender` is the VERIFIED writer for a
// channel and the host for a service. Returning true is synchronous host acceptance: core then
// durably removes that publication. Returning false leaves it queued for redelivery until
// [`hop_accept_hps_message`] succeeds.
void hop_poll_hps_messages(const struct HopNode *node, bool (*sink)(void *ctx,
                                                                    const uint8_t *id,
                                                                    const char *path,
                                                                    const uint8_t *sender,
                                                                    const uint8_t *body,
                                                                    uintptr_t body_len), void *ctx);
// Drain invites we have received, clearing them. Invokes `sink(ctx, host32, path_cstr, kind)` once
// per invite, where `kind` is a [`HopHpsKind`] discriminant. Pointers are valid only for the
// callback. Unlike the publication queue this is a take-and-clear drain, not an accept-to-remove
// one: an invite the host does not act on is gone, so persist what you surface.
void hop_poll_hps_invites(const struct HopNode *node, void (*sink)(void *ctx,
                                                                   const uint8_t *host,
                                                                   const char *path,
                                                                   uint32_t kind), void *ctx);
// Host: the join requests queued on a `RequestToJoin` topic, each a requester address. Invokes
// `sink(ctx, addr32)` once per requester (may be NULL to just count) and returns the count.
uintptr_t hop_hps_pending(const struct HopNode *node,
                          const char *path,
                          void (*sink)(void *ctx, const uint8_t *addr),
                          void *ctx);
// Host: selective forward rotation, which is how a member is REVOKED. Mints a new content key and
// seals it to every retained member except the `remove_count` addresses packed back to back in
// `remove` (32 bytes each, so `remove_count * 32` bytes read); a removed member keeps only the dead
// key, so it can still read history it already has and nothing published afterwards. `new_path`
// empty (or NULL) keeps the same path; a non-empty one moves the topic. Invokes `sink(ctx, id32)`
// once per rekey bundle (may be NULL) and returns the count, or 0 on NULL args, an over-long
// `remove` array, or a core error.
uintptr_t hop_hps_rekey(const struct HopNode *node,
                        const char *path,
                        const char *new_path,
                        const uint8_t *remove,
                        uintptr_t remove_count,
                        void (*sink)(void *ctx, const uint8_t *id),
                        void *ctx);
// Host: the retained-member set for a topic. Invokes `sink(ctx, addr32)` once per member (may be
// NULL to just count) and returns the count.
uintptr_t hop_hps_members(const struct HopNode *node,
                          const char *path,
                          void (*sink)(void *ctx, const uint8_t *addr),
                          void *ctx);
// Every topic this node hosts or follows, so an app can rebuild its channel list after a restart:
// the node persists topics, the app's in-memory list does not. Invokes
// `sink(ctx, host32, path_cstr, kind, hosting, access)` once per topic (may be NULL to just count),
// where `kind` is a [`HopHpsKind`] and `access` a [`HopHpsAccess`] discriminant. Returns the count.
uintptr_t hop_hps_my_topics(const struct HopNode *node, void (*sink)(void *ctx,
                                                                     const uint8_t *host,
                                                                     const char *path,
                                                                     uint32_t kind,
                                                                     bool hosting,
                                                                     uint32_t access), void *ctx);
// Same-app discoverable topics seen on the mesh: the descriptors a `Discoverable` host broadcasts,
// decrypted with the app secret, so this only ever surfaces topics from the same app fabric.
// Invokes `sink(ctx, host32, path_cstr, kind, title_cstr, summary_cstr, access)` once per topic
// (may be NULL to just count) and returns the count.
uintptr_t hop_hps_browse(const struct HopNode *node, void (*sink)(void *ctx,
                                                                  const uint8_t *host,
                                                                  const char *path,
                                                                  uint32_t kind,
                                                                  const char *title,
                                                                  const char *summary,
                                                                  uint32_t access), void *ctx);
// Encode a 32-byte `addr` as base58 into the C buffer `out` (`out_cap` bytes incl. NUL). Returns
// the string length (excluding NUL), or 0 on NULL / insufficient capacity.
uintptr_t hop_address_to_base58(const uint8_t *addr, char *out, uintptr_t out_cap);
// Decode a base58 address C string `text` into `out32` (32 bytes). Returns true iff it decoded to
// exactly 32 bytes.
bool hop_address_from_base58(const char *text, uint8_t *out32);
// Sign a self-certifying reachability record for THIS node's address, binding it to `endpoint`
// (UTF-8 C string, e.g. "wss://myaddress.com/_hop") for `ttl_secs`. Invokes `sink(ctx, bytes, len)`
// once with the signed record bytes (serve at /.well-known/hop or gossip). No-op on NULL args.
void hop_sign_reach_record(const struct HopNode *node,
                           const char *endpoint,
                           uint32_t ttl_secs,
                           void (*sink)(void *ctx, const uint8_t *bytes, uintptr_t len),
                           void *ctx);
// Verify a reachability record. `now_secs` = current Unix time to enforce expiry (0 skips the expiry
// check). Returns true iff valid; on a valid record invokes `sink(ctx, address32, endpoint_cstr,
// issued_at, ttl_secs)` once. Self-certifying: the record is checked against the address it names,
// no external anchor. `bytes`/`len` is the record from `hop_sign_reach_record`.
bool hop_verify_reach_record(const uint8_t *bytes,
                             uintptr_t len,
                             uint64_t now_secs,
                             void (*sink)(void *ctx,
                                          const uint8_t *address,
                                          const char *endpoint,
                                          uint64_t issued_at,
                                          uint32_t ttl_secs),
                             void *ctx);